# sphere_packing_analysis

./: CMakeLists.txt  CMakePresets.json  README.md
sample/: config.json
src/: CMakeLists.txt  contactInfoAnalysis.cpp  contactInfoAnalysis.h  dim3vectors.cpp  dim3vectors.h  fileInterface.cpp  fileInterface.h  fillingFactorAnalysis.cpp  fillingFactorAnalysis.h  generalAlgorithms.cpp  generalAlgorithms.h  main.cpp
